--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,19 +19,19 @@
 <resources>
 
     <!-- titles and such -->
-    <string name="app_name">Hall Monitor</string>
+    <string name="app_name">S4CoverOff</string>
     <string name="title_activity_configuration">Configuration</string>
     <string name="action_settings">Settings</string>
 
     <!-- admin receiver -->
-    <string name="admin_excuse">Hall Monitor needs to be able to lock the screen.</string>
-    <string name="admin_granted">Hall Monitor admin status granted!</string>
-    <string name="admin_revoked">Hall Monitor admin status revoked!</string>
+    <string name="admin_excuse">S4CoverOff needs to be able to lock the screen.</string>
+    <string name="admin_granted">S4CoverOff admin status granted!</string>
+    <string name="admin_revoked">S4CoverOff admin status revoked!</string>
     <string name="admin_refused">View cover service requires admin status</string>
     
     <!-- notification listener -->
-    <string name="notif_please_check">To enable this setting, check the Hall Monitor box and hit the back button.</string>
-    <string name="notif_please_uncheck">To disable this setting, uncheck the Hall Monitor box and hit the back button.</string>
+    <string name="notif_please_check">To enable this setting, check the S4CoverOff box and hit the back button.</string>
+    <string name="notif_please_uncheck">To disable this setting, uncheck the S4CoverOff box and hit the back button.</string>
     <string name="notif_left_checked">You didn\'t uncheck the box, so the notification service is still running.</string>
     <string name="notif_left_unchecked">You didn\'t check the box! Are you trying to make me crash?</string>
 
@@ -45,11 +45,11 @@
     <string name="pref_notifications">Show notification icons</string>
     <string name="pref_notifications_summary">If this is enabled, you will see the current notifications icons when the screen turns on while the cover is closed.</string>
     <string name="pref_delay">Covered lock screen timeout</string>
-    <string name="pref_delay_summary">When the cover is closed, Hall Monitor stays up for this many milliseconds. If set to 0, the screen turns off immediately.</string>
+    <string name="pref_delay_summary">When the cover is closed, S4CoverOff stays up for this many milliseconds. If set to 0, the screen turns off immediately.</string>
     <string name="pref_dim">Dim covered lock screen</string>
-    <string name="pref_dim_summary">When the cover is closed and Hall Monitor is up (see above), should the screen dim?</string>
+    <string name="pref_dim_summary">When the cover is closed and S4CoverOff is up (see above), should the screen dim?</string>
     <string name="pref_keep_admin">Keep device admin status</string>
-    <string name="pref_keep_admin_summary">When Hall Monitor is disabled, don\'t relinquish Device Administrator permissions. If checked, Hall Monitor won\'t need to ask to become Device Administrator when you turn it on. May be useful with automation, e.g. Tasker.</string>
+    <string name="pref_keep_admin_summary">When S4CoverOff is disabled, don\'t relinquish Device Administrator permissions. If checked, S4CoverOff won\'t need to ask to become Device Administrator when you turn it on. May be useful with automation, e.g. Tasker.</string>
     <string name="pref_datetime">Display time and date</string>
     <string name="pref_datetime_summary">If checked, display time and date instead of only time.</string>
     <string name="pref_disable_home">Disable buttons</string>
@@ -108,8 +108,8 @@
     <string name="pref_security_settings">Screen Lock Settings</string>
     <string name="pref_security_settings_summary">Shortcut to Android screen lock settings</string>
     
-    <string name="pref_about">About Hall Monitor</string>
-	<string name="pref_about_summary">Hall Monitor version 0.4.2.\nProduced by Alex Burka (@durka), @manusfreedom, @B--B, @Wallace0, @habeIchVergessen, released under the Apache v2 License.\nFeedback: android@alexburka.com</string>
+    <string name="pref_about">About S4CoverOff</string>
+	<string name="pref_about_summary">S4CoverOff based on Hall Monitor version 0.4.2.\nProduced by Alex Burka (@durka), @manusfreedom, @B--B, @Wallace0, @habeIchVergessen, released under the Apache v2 License.\nFeedback: android@alexburka.com</string>
     <string name="pref_settings">Settings</string>
     <string name="pref_preview">Preview</string>
     <string name="pref_test">Test</string>
